Automatically backed up by Learn

--- a/style.css
+++ b/style.css
@@ -19,7 +19,9 @@ section #featured-property {
   text-align: center;
   
 }
-
+figure {
+  text-align: center;
+}
 div {
   display: block;
   float: left;
